# BattleTris

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  PORTING.md  history.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: manifest.toml
assets/sounds/generated-default/: sound-pack.toml
assets/sounds/generated-rated/: sound-pack.toml
assets/themes/high-contrast/: theme.toml
assets/themes/original/: theme.toml
assets/themes/original-inspired/: theme.toml
assets/themes/original/fonts/: URW-Base35-LICENSE.txt
crates/battletris-client/: Cargo.toml
crates/battletris-client/src/: lib.rs  main.rs  net.rs
crates/battletris-client/src/app/: audio.rs  cli.rs  gameplay.rs  mod.rs  model.rs  networking.rs  settings.rs  tests.rs  theme.rs  visual.rs
crates/battletris-client/src/app/ui/: components.rs  input.rs  labels.rs  mod.rs  render.rs  spawn.rs
crates/battletris-client/tests/: startup_smoke.rs
crates/battletris-core/: Cargo.toml
crates/battletris-core/fixtures/board/: invalid-dimensions.btfix  mixed-cells.btfix
crates/battletris-core/fixtures/piece/: legacy-rotation-coverage.btfix
crates/battletris-core/fixtures/scenario/: phase5-line-clears.btfix
crates/battletris-core/src/: ai.rs  board.rs  cell.rs  fixtures.rs  game.rs  lib.rs  piece.rs  piece_generator.rs  recon.rs  rng.rs  score.rs  weapons.rs
crates/battletris-db/: Cargo.toml
crates/battletris-db/migrations/: V1__initial_player_records.sql  V2__signed_result_funds.sql
crates/battletris-db/src/: lib.rs
crates/battletris-protocol/: Cargo.toml
crates/battletris-protocol/src/: legacy.rs  lib.rs
crates/battletris-protocol/tests/: network_mvp.rs
crates/battletris-server/: Cargo.toml
crates/battletris-server/src/: lib.rs  main.rs
crates/battletris-tools/: Cargo.toml
crates/battletris-tools/src/: main.rs  net_smoke.rs
docs/: core-fixtures.md  distribution.md  external-research.md  legacy-implementation-handoff.md  legacy-server-interop.md  manual-network-tests.md  rewrite-spec.md  rust-workspace.md  traceability-checklist.md
docs/adr/: 0001-rust-workspace-boundaries.md  0002-deterministic-rng-and-fixtures.md  0003-protocol-encoding-and-framing.md  0004-networking-mvp-direct-connect-and-lan-discovery.md  0005-persistence-backend-and-paths.md  0006-identity-ranking-and-stat-compatibility.md  0007-self-hosted-lobby-and-ranked-authority.md
scripts/: capture-current-visuals.sh  capture-legacy-visuals.sh  check-native-deps.sh  full-check.sh  package-check.sh  package-release.sh  smoke-package.sh
usr/src/: BTConfig.H  Makefile  Makeinclude  Makeinclude.in
usr/src/audio/: DevAudio.C  DevAudio.H
usr/src/btref/: btcmds.C  btref.C  btsignals.H
usr/src/daemons/: BTDBServer.H  BTMDSlave.H  BTSDClient.H  BTServer.C  BTServer.H  BTSlave.C  BTSlave.H  btserverd.C  btslaved.C
usr/src/db/: BTConfigFile.C  BTDB.C  BTDBErr.C  BTDBRecord.C  BTDBRecord.H  BTGameStats.C  BTNetwork.H  BTNetworkEntry.C  BTNetworkEntry.H  BTPlayer.C  BTPlayerRecord.C  ParsedFile.H
usr/src/game/: BTBazaar.C  BTBazaar.H  BTBiff.H  BTBoard.H  BTBoardManager.C  BTBox.H  BTChallengeDialog.C  BTCommManager.C  BTComputer.C  BTComputer.H  BTDebug.H  BTGame.C  BTGame.H  BTPiece.C  BTPieceManager.C  BTPimp.C  BTRecon.C  BTScore.H  BTSigHandlers.H  BTSoundManager.C  BTStack.C  BTStartup.C  BTStartup.H  BTWeapon.H  BattleTris.C  PPMReader.C
usr/src/sockets/: StreamSocket.C
usr/src/stdlib/: ListIter.H  RWListIter.H
usr/src/widget/: BTXDisplay.C  BTXPalette.C  BTXmUtils.C
