[package]
name = "battletris-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "BattleTris desktop client, rendering, input, menus, assets, and audio."

[[bin]]
name = "client"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
battletris-core = { path = "../battletris-core" }
battletris-db = { path = "../battletris-db" }
battletris-protocol = { path = "../battletris-protocol" }
bevy = { version = "0.19.0", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "wav",
    "x11",
] }
directories = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
mdns-sd = { version = "0.20.1", optional = true, default-features = true }

[features]
default = ["lan-discovery"]
lan-discovery = ["dep:mdns-sd"]
wayland = ["bevy/wayland"]
