[package]
name = "battletris-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Deterministic BattleTris rules, state, events, and AI primitives."

[lints]
workspace = true

[dependencies]
rand = { version = "0.10.1", default-features = false, features = ["std"] }
rand_chacha = { version = "0.10.0", default-features = false, features = ["std"] }
