[package]
name = "battletris-protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "BattleTris network messages, framing, versioning, and compatibility fixtures."

[lints]
workspace = true

[dependencies]
bytes = "1.12.0"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", default-features = false, features = ["io-util", "net"] }

[dev-dependencies]
battletris-core = { path = "../battletris-core" }
tokio = { version = "1.52.3", default-features = false, features = ["io-util", "macros", "net", "rt", "time"] }
