[package]
name = "battletris-tools"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "BattleTris asset, audio, replay, protocol, and legacy extraction tools."

[lints]
workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
