[package]
name = "battletris-tools"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "BattleTris asset, audio, replay, protocol, and legacy extraction tools."

[[bin]]
name = "tools"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
battletris-core = { path = "../battletris-core" }
battletris-protocol = { path = "../battletris-protocol" }
image = { version = "0.25.10", default-features = false, features = ["png"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
toml = "1.1.2"
